--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -16,16 +16,22 @@
 	</head>
 
 	<body>
-	<div class="container">
-		<div class="row">
-			{{block "content" .}} {{end}}
-
-	</body>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					{{block "content" .}} {{end}}
+				</div>
+			</div>
+		</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	
 	{{block "js".}}
 
 	{{end}}
+	</body>
+
+
 	
 
 </html>
